crates/oxc_react_compiler/tests/snapshots/gating__dynamic-gating-bailout-nopanic.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/gating/dynamic-gating-bailout-nopanic.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "Existing memoization could not be preserved", labels: [LabeledSpan { label: Some("This dependency list does not match the dependencies inferred from the callback"), span: Span { start: 360, end: 362 }, primary: true }, LabeledSpan { label: Some("This dependency is inferred here"), span: Span { start: 352, end: 357 }, primary: false }], help: Some("React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. The inferred dependencies did not match the manually specified dependencies, which could cause the value to change more or less frequently than expected. The inferred dependency was `value`, but the source dependencies were []. Inferred dependency not present in source"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Error, code: OxcCode { scope: Some("react-compiler"), number: Some("PreserveManualMemo") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/preserve-manual-memoization") } }

// @dynamicGating:{"source":"shared-runtime"} @validatePreserveExistingMemoizationGuarantees @panicThreshold:"none" @loggerTestOnly @validateExhaustiveMemoizationDependencies:false
import { useMemo } from "react";
import { identity } from "shared-runtime";
function Foo({ value }) {
	"use memo if(getTrue)";
	const initialValue = useMemo(() => identity(value), []);
	return (<>
      <div>initial value {initialValue}</div>
      <div>current value {value}</div>
    </>);
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{ value: 1 }],
	sequentialRenders: [{ value: 1 }, { value: 2 }]
};
