crates/oxc_react_compiler/tests/snapshots/gating__dynamic-gating-disabled.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/gating/dynamic-gating-disabled.js
---
import { c as _c } from "react/compiler-runtime";
import { getFalse } from "shared-runtime";
const Foo = getFalse() ? function Foo() {
	"use memo if(getFalse)";
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div>hello world</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
} : function Foo() {
	"use memo if(getFalse)";
	return <div>hello world</div>;
};
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{}]
};
