crates/oxc_react_compiler/tests/snapshots/gating__dynamic-gating-noemit.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/gating/dynamic-gating-noemit.js
---
// @dynamicGating:{"source":"shared-runtime"} @outputMode:"lint"
function Foo() {
	"use memo if(getTrue)";
	return <div>hello world</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{}]
};
