crates/oxc_react_compiler/tests/snapshots/gating__error.dynamic-gating-invalid-identifier.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/gating/error.dynamic-gating-invalid-identifier.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Gating: Dynamic gating directive is not a valid JavaScript identifier", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 47, length: 74 }, primary: false }], help: Some("Found 'use memo if(true)'"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
