crates/oxc_react_compiler/tests/snapshots/gating__gating-access-function-name-in-component.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/gating/gating-access-function-name-in-component.js
---
import { c as _c } from "react/compiler-runtime";
import { isForgetEnabled_Fixtures } from "ReactForgetFeatureFlag";
const Component = isForgetEnabled_Fixtures() ? function Component() {
	const $ = _c(1);
	const name = Component.name;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div>{name}</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
} : function Component() {
	const name = Component.name;
	return <div>{name}</div>;
};
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
